* Fixed bug where no/invalid file listing would be written if there was no disk space (the old one is used now 
  instead...)
* XML File lists that contain hashes if available, and support full utf-8 names (correct viewing is not guaranteed,
  but download should work)
* Upgraded to zlib 1.2.1 (thanks garg)
* Extra column for hub in transfer list (thanks torgny nyblom)
* Copy nick to favorites in transfer list (thanks torgny nyblom)
* Files starting with a '.' are no longer shared if hidden files are not shared (...unix...)
* Fixed a minor memory leak when an invalid search result is returned (exploitable minor security issue)
* Slight speedup of file list loading
* File IO rewritten (major change)
* Rollback no longer depends on buffer size
* /rebuilddb rebuilds the hash database and potentially reduces the size of the raw hash data file (also checks
  its integrity)


 -- 0.306 2004-01-09 --
* Fixed an issue with UNC paths (those starting with "\\")
* Changed autosearch so that it only searches if less than 5 sources are online, this should stop galloping
  filelist downloads as well
* Upgraded to WTL 7.1, should fix a few UI issues
* Fixed brightness of compressed transfer progress bars
* Fixed a crash with badly formatted compressed transfer requests
* Some work on memory managment, dramatically improving DC++'s behaviour with large queues / shares
* Auto-match queue is only done on exact match
* Fixed a bug in the compressor that may have caused compressed uploads not to finish and/or 100% cpu
* The sound part of partially corrupted queues is now recovered
* When opening a file list from search results, the file's directory is automatically shown
* An extra buffer flush is done to ensure that file lists are fully written to disk
* Readme automatically shown for new users (thanks johnny)
* Filename is shown on transfer error (no slots etc) (thanks ciber)
* Ctrl-tab order is now the standard last-seen