@@ -125,6 +125,7 @@ string ResourceManager::strings[] = {
 "Invalid number of slots", 
 "Invalid target file (missing directory, check default download directory setting)", 
 "Ip: ", 
+"Ip", 
 "Items", 
 "Joins: ", 
 "Join/part showing off", 
@@ -541,6 +542,7 @@ string ResourceManager::names[] = {
 "InvalidNumberOfSlots", 
 "InvalidTargetFile", 
 "Ip", 
+"IpBare", 
 "Items", 
 "Joins", 
 "JoinShowingOff", 
